adds untested docker image for the gbp api

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,10 @@ services:
       - 80
     volumes:
       - ./ledger:/app
+  api:
+    build:
+      context: api
+    ports:
+      - 80
+    volumes:
+      - ./api:/app
