--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -21,7 +21,7 @@ jobs:
         run: doctl registry login
 
       - name: Build image
-        run: docker build -t registry.digitalocean.com/haste-buff/ledger:$(echo $GITHUB_SHA | head -c7) -f ./ledger/Dockerfile ./ledger
+        run: docker build -t registry.digitalocean.com/jonahgeorge/ledger:$(echo $GITHUB_SHA | head -c7) -f ./ledger/Dockerfile ./ledger
 
       - name: Push image
-        run: docker push registry.digitalocean.com/haste-buff/ledger
+        run: docker push registry.digitalocean.com/jonahgeorge/ledger
