adds config variable for ledger address

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - 5555:80
     volumes:
       - ./ledger:/app
+    environment:
+      - HTTP_LEDGER=ledger:80
   api:
     build:
       context: api
